--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
         <h1> # Let's play! #</h1>
     </header>
 
-    <div>
+    <div class="board">
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+    </div>
 
+    <div class="winning-message" data-winning-message>
+        <p> Venceu! </p>
+        <button>Reininciar</button>
     </div>
 
     <footer>
