--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
 
     <div class="board">
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
+        <div class="cell x" data-cell=""></div>
+        <div class="cell circle" data-cell=""></div>
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
