--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
 
     <div class="winning-message" data-winning-message>
-        <p> Venceu! </p>
-        <button>Reininciar</button>
+        <p class="winning-message-text"> Venceu! </p>
+        <button class="winning-message-button">Reiniciar</button>
     </div>
 
     <footer>
