--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1> # Let's play! #</h1>
+        <h1> # Jogo da Velha #</h1>
     </header>
 
-    <div class="board">
-        <div class="cell x" data-cell=""></div>
-        <div class="cell circle" data-cell=""></div>
+    <div class="board X">
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
