--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1> # Jogo da Velha #</h1>
     </header>
 
-    <div class="board X">
+    <div class="board">
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
         <div class="cell" data-cell=""></div>
@@ -26,12 +26,8 @@
 
     <div class="winning-message" data-winning-message>
         <p class="winning-message-text"> Venceu! </p>
-        <button class="winning-message-button"> Reiniciar </button>
+        <button class="winning-message-button" data-restart-button> Jogar de Novo </button>
     </div>
-
-    <footer>
-        
-    </footer>
     
     <script src="script.js"></script>
 
